kubernetes/postgres-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: app
  creationTimestamp: null
  labels:
    name: database
spec:
  progressDeadlineSeconds: 2147483647
  replicas: 1
  selector:
    matchLabels:
      service: postgres
  template:
    metadata:
      creationTimestamp: null
      labels:
        service: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:15.0-alpine
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: postgres-volume-mount
        resources: {}
          # limits:
          #   memory: 2Gi
          #   cpu: "1"
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: postgres-volume-mount
        persistentVolumeClaim:
          claimName: postgres-pvc
