kubernetes/server-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    name: shopogolik
  name: shopogolik
spec:
  progressDeadlineSeconds: 2147483647
  replicas: 1
  selector:
    matchLabels:
      app: shopogolik
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: shopogolik
    spec:
      containers:
      - env:
        - name: POSTGRES_DB
          valueFrom:
            configMapKeyRef:
              name: shopogolik-cm
              key: db_name
        - name: POSTGRES_HOST
          valueFrom:
            configMapKeyRef:
              name: shopogolik-cm
              key: db_host
        - name: POSTGRES_PORT
          valueFrom:
            configMapKeyRef:
              name: shopogolik-cm
              key: db_port
        - name: POSTGRES_USER
          valueFrom:
            secretKeyRef:
              key: user
              name: postgres-credentials
        - name: POSTGRES_PASSWORD
          valueFrom:
            secretKeyRef:
              key: password
              name: postgres-credentials
        - name: FIRST_SUPERUSER
          valueFrom:
            secretKeyRef:
              name: server-credentials
              key: superuser
        - name: FIRST_SUPERUSER_PASSWORD
          valueFrom:
            secretKeyRef:
              name: server-credentials
              key: superuser_pwd

        image: rash77/shopogolik-backend:v1.6
        imagePullPolicy: Always
        name: shopogolik
        resources: {}
          # limits:
          #   memory: 2Gi
          #   cpu: "1"
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
