kubernetes/postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: app
  labels:
    service: postgres
spec:
  selector:
    service: postgres
  type: ClusterIP
  ports:
  - port: 5432
