kubernetes/server-service.yml
apiVersion: v1
kind: Service
metadata:
  name: shopogolik
  namespace: app
  labels:
    service: shopogolik
spec:
  selector:
    app: shopogolik
  ports:
  - port: 8000
    targetPort: 8000
